# CancerGenRAG

./: LICENSE  README.md  pyproject.toml
config/: example.env
configs/: example.env
data/sample/: LC_GWAS_Priority_Scores.csv  LC_GWAS_Priority_Scores_TEMPLATE.csv  aggregated_ranks_TEMPLATE.csv
notebooks/: Data Preprocess.ipynb  build_dbSNP.py  impute_rsID.py  imputersid.ipynb  pgs_scores_lungcancer.csv  results.ipynb
r/: Calculate_GWAS_priority_score.R  annotate_data.R  annotate_datasets.R  generate_data.R  generate_data_rev.R
requirements/: core.txt  preprocess.txt  rag.txt
scripts/aggregation/: align_priority_ids.py  build_crosswalk_from_pkl.py  check_labels_coverage.py  compute_metrics_from_ranks.py  plot_unsup_comparison.py  run_unsup_experiments.py  train_eval_topk_end2end.py  unsup_postprocess_top50.py
scripts/preprocess/: build_dbsnp_sqlite.py  impute_rsid_from_sqlite.py
scripts/rag/: clinvar_analysis_chat.py  gene_chat.py  pgs_chat.py
src/cancergen_rag/: __main__.py
